apps/flux-receiver/Ingress-receiver.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: receiver
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    external-dns.alpha.kubernetes.io/hostname: "flux-receiver.slfhst.io"
    external-dns.alpha.kubernetes.io/target: "slfhst.io"
spec:
  tls:
  - hosts:
    - flux-receiver.slfhst.io
    secretName: flux-receiver-tls
  rules:
  - host: flux-receiver.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
